--- a/angular-fw/src/app/app.component.html
+++ b/angular-fw/src/app/app.component.html
@@ -1,10 +1,13 @@
-  <h1>
-    Welcome {{ name }}!
-  </h1>
-  <p *ngIf="name != 'Shahram'">Name updated!</p>
-  <button (click)="onChangeName()">Change Name</button>
-  <button (click)="onAddElement()">New Element</button>
-  <ul>
-    <li *ngFor="let el of elements"
-        [id]="'element' + el">Element {{ el }}</li>
-  </ul>
+<app-username></app-username>
+<h1 [ngClass]="{updated: name != 'Shahram'}">
+  Welcome {{ name }}!
+</h1>
+<p *ngIf="name != 'Shahram'">Name updated!</p>
+<button (click)="onChangeName()">Change Name</button>
+<button (click)="onAddElement()">New Element</button>
+<ul>
+  <li *ngFor="let el of elements"
+      [id]="'element' + el"
+      [ngStyle]="{backgroundColor: getColor(el)}"
+      >Element {{ el }}</li>
+</ul>
