--- a/angular-fw/src/app/app.component.html
+++ b/angular-fw/src/app/app.component.html
@@ -9,7 +9,8 @@
 <button (click)="onChangeName()">Change Name</button>
 <button (click)="onAddElement()">New Element</button>
 <ul>
-  <li *ngFor="let el of elements"
+  <li
+      *ngFor="let el of elements"
       [id]="'element' + el"
       [ngStyle]="{backgroundColor: getColor(el)}"
       >Element {{ el }}</li>
