--- a/cmp-assignment-2-start/src/app/app.component.html
+++ b/cmp-assignment-2-start/src/app/app.component.html
@@ -20,4 +20,6 @@
   </li>
   <li>Output the array in the method where you add items by calling console.log(yourArray)</li>
 </ol>
-
+<hr>
+  <app-cart [items]="rootItems"       (itemAdded)="onItemWasAdded($event)"></app-cart>
+  
